--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-splash-screen": "~0.27.6",
     "expo-status-bar": "~1.12.1",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "quedu": "file:",
     "react": "18.2.0",
     "react-dom": "18.2.0",
