--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-app-loading": "^2.1.1",
     "expo-document-picker": "~13.0.1",
     "expo-font": "~13.0.1",
+    "expo-image-picker": "~16.0.2",
     "expo-linear-gradient": "~14.0.1",
     "expo-splash-screen": "~0.29.7",
     "expo-status-bar": "~2.0.0",
@@ -32,6 +33,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.1",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-image-picker": "^7.1.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
